Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27407

QTCreator build settings don't load cmake parameters after changing build directory.

XMLWordPrintable

    • Windows
    • 8c050eaad9 (qt-creator/qt-creator/7.0) 8c050eaad9 (qt-creator/qt-creator/master) 8c050eaad9 (qt-creator/tqtc-qt-creator/7.0)

      In Qt Creator in Projects/Build Settings changing the CMake directory build, using the browse button, doesn't update CMake Parameter list. The newly set build directory will also not be saved if the build configuration is switched.

      When using the line edit or switching the build type the CMake parameters will be updated.

      As workaround the build directory can currently be set via browse button, but it is necessary to select the line edit for build directory or build type and click somewhere else to invoke the editing finished signal. This will update the CMake parameters.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cadam Cristian Adam
            crashutopia Henning Albohm
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes