CMake: Set the build directory change after Browse

As an user I expect when I select Browse for the build directory
that after the directory has been chosen it will be taken into
consideration.

Amends 1d600101ee81305d2d085920988a1cbd33f5b00e

Fixes: QTCREATORBUG-27407
Change-Id: I331b6095c176f57ca8e4c73c0b378a11ce3d6dbc
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>